--- a/Assets/Plugins/OculusPlugin.bundle/Contents/Info.plist
+++ b/Assets/Plugins/OculusPlugin.bundle/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>14D131</string>
+	<string>14C1514</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
